# tydi-lang-2-chisel

./: .gitignore  README.md  json_output.json  main.py  pyproject.toml  tpch.json  tydi-lang-2-chisel.py
templates/: chisel_components.scala  elements.scala  generation_stub.scala  output.scala
tl2chisel/: __init__.py  __main__.py  tl2chisel.py
tl2chisel/templates/: chisel_components.scala  elements.scala  generation_stub.scala  output.scala
tydi_lang_2_chisel/: __init__.py  __main__.py  tydi_lang_2_chisel.py
